# forty-one-env

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/forty_one/: __init__.py  card.py  hand.py
src/forty_one.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/forty_one/action/: action.py
src/forty_one/card/: __init__.py  card.py  card_deck.py  hand.py
src/forty_one/game_loop/: __init__.py  game_loop.py
src/forty_one/game_state/: __init__.py  game_state.py  hand.py
src/forty_one/model/: __init__.py  game_result.py  game_state.py
src/forty_one/player/: __init__.py  base_player.py  human_player.py  random_player.py  simple_heuristic_player.py
